# tonie-sync

./: .env.sample  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-build-and-push.yml  publish.yml
docker/: Dockerfile  entrypoint.sh
src/tonie_sync/: __init__.py  __main__.py  main.py  sync_service.py  utils.py
src/tonie_sync/clients/: __init__.py  spotdl_client.py  spotify_client.py  tonie_client.py  youtube_client.py
src/tonie_sync/models/: __init__.py  track_metadata.py
tests/: test_spotdl_client.py  test_spotify_client.py
