[tool.poetry]
name = "tonie_sync"
version = "0.1.0"
description = "A package to sync Spotify playlists to creative tonies."
authors = ["Anonymous <anonymous@xyz.com>"]
readme = "README.md"
license = "MIT"
include = ["src/tonie_sync/py.typed"]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
ffmpy = "^0.4.0"
music-tag = "^0.4.3"
pillow = "^10.4.0"
protobuf = "==3.*"
tqdm = "^4.66.4"
tonie-api = "^0.1.1"
click = "^8.1.7"
pydantic = { extras = ["email"], version = "^2.8.2" }
pydantic-settings = "^2.4.0"
spotdl = "^4.2.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
mypy = "^1.8.0"
pytest = "^7.4.4"
types-requests = "^2.32.0.20240712"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "UP"]
ignore = ["E203"]
