[project]
    authors = [
        {name = "Anonymous", email = "anonymous@xyz.com"},
    ]
    license = {text = "MIT"}
    requires-python = "<3.14,>=3.10"
    dependencies = [
        "ffmpy<1.0.0,>=0.4.0",
        "music-tag<1.0.0,>=0.4.3",
        "pillow<11.0.0,>=10.4.0",
        "protobuf==3.*",
        "tqdm<5.0.0,>=4.66.4",
        "tonie-api<1.0.0,>=0.1.1",
        "click<9.0.0,>=8.1.7",
        "spotdl<5.0.0,>=4.2.10",
]
    name = "tonie_sync"
    version = "0.1.5"
    description = "A package to sync Spotify playlists to creative tonies."
    readme = "README.md"

[project.urls]
    homepage = "https://github.com/sHooPmyWooP/tonie-sync"

[dependency-groups]
    dev = [
        "ruff<1.0.0,>=0.1.11",
        "mypy<2.0.0,>=1.8.0",
        "pytest<8.0.0,>=7.4.4",
        "types-requests<3.0.0.0,>=2.32.0.20240712",
    ]

[tool.ruff]
target-version = "py311"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "UP"]
ignore = ["E203"]
