[project]
version = "0.1.15"
authors = [{ name = "Anonymous", email = "anonymous@xyz.com" }]
license = { text = "MIT" }
requires-python = "<3.14,>=3.10"
dependencies = [
    "ffmpy<1.0.0,>=0.4.0",
    "music-tag<1.0.0,>=0.4.3",
    "pillow<11.0.0,>=10.4.0",
    "protobuf==3.*",
    "tqdm<5.0.0,>=4.66.4",
    "tonie-api<1.0.0,>=0.1.1",
    "click<9.0.0,>=8.1.7",
    "spotdl<5.0.0,>=4.2.10",
    "ipykernel>=6.29.5",
    "pytubefix>=8.12.3",
]
name = "tonie_sync"
description = "A package to sync Spotify playlists to creative tonies."
readme = "README.md"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
homepage = "https://github.com/sHooPmyWooP/tonie-sync"

[dependency-groups]
dev = [
    "ruff<1.0.0,>=0.1.11",
    "mypy<2.0.0,>=1.8.0",
    "pytest<8.0.0,>=7.4.4",
    "types-requests<3.0.0.0,>=2.32.0.20240712",
    "pre-commit>=4.2.0",
]

[tool.ruff]
exclude = ["notebooks"]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
exclude = ["D212"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["E501", "D100", "D104", "D105", "D107", "D203", "D213"]
extend-select = [
    "UP", # pyupgrade
    "D",  # pydocstyle
]
